; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_stv0900_sw.c_stv0900_get_vit_fec.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_stv0900_sw.c_stv0900_get_vit_fec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stv0900_internal = type { i32 }

@VIT_CURPUN = common dso_local global i32 0, align 4
@STV0900_FEC_1_2 = common dso_local global i32 0, align 4
@STV0900_FEC_2_3 = common dso_local global i32 0, align 4
@STV0900_FEC_3_4 = common dso_local global i32 0, align 4
@STV0900_FEC_5_6 = common dso_local global i32 0, align 4
@STV0900_FEC_6_7 = common dso_local global i32 0, align 4
@STV0900_FEC_7_8 = common dso_local global i32 0, align 4
@STV0900_FEC_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stv0900_internal*, i32)* @stv0900_get_vit_fec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stv0900_get_vit_fec(%struct.stv0900_internal* %0, i32 %1) #0 {
  %3 = alloca %struct.stv0900_internal*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.stv0900_internal* %0, %struct.stv0900_internal** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.stv0900_internal*, %struct.stv0900_internal** %3, align 8
  %8 = load i32, i32* @VIT_CURPUN, align 4
  %9 = call i32 @stv0900_get_bits(%struct.stv0900_internal* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %23 [
    i32 13, label %11
    i32 18, label %13
    i32 21, label %15
    i32 24, label %17
    i32 25, label %19
    i32 26, label %21
  ]

11:                                               ; preds = %2
  %12 = load i32, i32* @STV0900_FEC_1_2, align 4
  store i32 %12, i32* %5, align 4
  br label %25

13:                                               ; preds = %2
  %14 = load i32, i32* @STV0900_FEC_2_3, align 4
  store i32 %14, i32* %5, align 4
  br label %25

15:                                               ; preds = %2
  %16 = load i32, i32* @STV0900_FEC_3_4, align 4
  store i32 %16, i32* %5, align 4
  br label %25

17:                                               ; preds = %2
  %18 = load i32, i32* @STV0900_FEC_5_6, align 4
  store i32 %18, i32* %5, align 4
  br label %25

19:                                               ; preds = %2
  %20 = load i32, i32* @STV0900_FEC_6_7, align 4
  store i32 %20, i32* %5, align 4
  br label %25

21:                                               ; preds = %2
  %22 = load i32, i32* @STV0900_FEC_7_8, align 4
  store i32 %22, i32* %5, align 4
  br label %25

23:                                               ; preds = %2
  %24 = load i32, i32* @STV0900_FEC_UNKNOWN, align 4
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %23, %21, %19, %17, %15, %13, %11
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @stv0900_get_bits(%struct.stv0900_internal*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
